# prompt-governance-engine

./: .gitattributes  README.md  general-rules.mdc  specific-project-rules-p1.mdc
Backend/: .gitignore  Makefile  QUICKSTART.md  README.md  pip.conf  pyproject.toml  requirements-dev.txt  requirements.txt
Backend/config/: config.example.yaml
Backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  ecs-task-definition.json
Backend/migrations/: alembic.ini
Backend/migrations/alembic/: env.py
Backend/migrations/alembic/versions/: 001_initial_schema.py
Backend/scripts/: deploy.sh  setup.sh  start.sh
Backend/src/: __init__.py  main.py
Backend/src/api/: dependencies.py
Backend/src/api/middleware/: logging.py  rate_limit.py
Backend/src/api/v1/: clusters.py  evolution.py  health.py  prompts.py  templates.py
Backend/src/api/v1/web/: __init__.py  clusters.py  dataset.py  evolution.py  index.py  prompts.py  templates.py
Backend/src/clients/: __init__.py  portkey.py  qdrant.py  redis.py
Backend/src/config/: models.py  settings.py
Backend/src/models/: database.py  schemas.py
Backend/src/services/: canonicalization.py  clustering.py  dataset_reader.py  drift_detection.py  embedding.py  evolution.py  family_tracking.py  model_router.py  moderation.py  reasoning.py  similarity.py  template_versioning.py
Backend/src/templates/: base.html  cluster_detail.html  clusters.html  evolution.html  families.html  index.html  ingest_dataset.html  ingest_prompt.html  template_detail.html  templates.html
Backend/src/utils/: batch_processor.py  cloudwatch.py  logging.py  metrics.py
Backend/src/workers/: __init__.py  dataset_ingestion.py
Dataset/: test.wp_source  test.wp_target  valid.wp_source  valid.wp_target
cursor_metadata/: SPEC-2025-001-kb.json  SPEC-2025-001.json
specs/PE-9999-smart-prompt-parser-canonicalisation-engine/: plan.md  spec.md  tasks.md
